Update cart service